[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Font/use_this.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/logoFINAAAAAK.png" type="Texture" id=3]
[ext_resource path="res://Assets/ciggy light.png" type="Texture" id=4]
[ext_resource path="res://Scripts/schmancy_buttons.gd" type="Script" id=5]
[ext_resource path="res://Assets/SFX/ui/scroll_002.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/menuguy.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/ui/click_004.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/ui/rollover6.ogg" type="AudioStream" id=9]

[sub_resource type="Shader" id=89]
code = "shader_type canvas_item;
uniform sampler2D noise_img;
uniform float speed = 1.0;
uniform vec4 smoke_color : hint_color;

void fragment(){
	vec2 uv1 = vec2(UV.x + TIME*speed, UV.y);
	vec2 uv2 = vec2(UV.x - TIME*speed, UV.y);
	vec2 uv3 = vec2(UV.x, UV.y + TIME*speed);
	
	
	float noise_r = texture( noise_img, uv1 ).r;
	float noise_g = texture( noise_img, uv2 ).g;
	float noise_b = texture( noise_img, uv3 ).b;
	
	vec3 new_color = vec3(noise_r, noise_g, noise_b);
	
	float new_alpha = noise_r * noise_g * noise_b;
	
	COLOR.rgb = smoke_color.rgb;//texture(TEXTURE, UV).rgb;
	COLOR.a = clamp(new_alpha * 5.0 * texture(TEXTURE, UV).a, 0.0, 1.0);
}"

[sub_resource type="OpenSimplexNoise" id=88]

[sub_resource type="NoiseTexture" id=90]
width = 1000
height = 1000
seamless = true
noise = SubResource( 88 )
noise_offset = Vector2( 1000, 1000 )

[sub_resource type="ShaderMaterial" id=66]
shader = SubResource( 89 )
shader_param/speed = 0.05
shader_param/smoke_color = Color( 0.572549, 0.0352941, 0.0823529, 0.972549 )
shader_param/noise_img = SubResource( 90 )

[sub_resource type="DynamicFont" id=76]
size = 50
outline_size = 3
outline_color = Color( 0.0745098, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=82]
bg_color = Color( 0.870588, 0.0313726, 0.207843, 0 )
border_width_left = 9
border_width_top = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color( 0.870588, 0.0313726, 0.207843, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.984314, 0.619608, 0.188235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.988235, 0.364706, 0.321569, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 8 )

[sub_resource type="Gradient" id=91]
offsets = PoolRealArray( 0, 0.0716981, 0.188679, 0.792453, 0.901887, 0.992453 )
colors = PoolColorArray( 0.870588, 0.0313726, 0.207843, 0, 0.870588, 0.0313726, 0.207843, 0, 0.870588, 0.0313726, 0.207843, 1, 0.870588, 0.0313726, 0.207843, 1, 0.870588, 0.0313726, 0.207843, 0, 0.870588, 0.0313726, 0.207843, 0 )

[sub_resource type="GradientTexture2D" id=35]
gradient = SubResource( 91 )

[sub_resource type="DynamicFont" id=78]
size = 30
outline_size = 2
outline_color = Color( 0.160784, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=77]
background_mode = 4
tonemap_white = 0.35
glow_enabled = true
glow_intensity = 1.39
glow_blend_mode = 0
glow_hdr_threshold = 1.5
glow_bicubic_upscale = true
adjustment_enabled = true

[sub_resource type="RectangleShape2D" id=83]
extents = Vector2( 611.5, 3 )

[sub_resource type="Animation" id=85]
resource_name = "Animation"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect2:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1.05, 1.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect2/Light2D:energy")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 5, 6.2, 8.5, 9.2, 9.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.92, 1.4, 1.92, 1.92, 2.0, 2.0, 1.2 ]
}

[sub_resource type="Animation" id=86]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect2:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect2/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.92 ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 0.9, 0.9, 0.9, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.1, 1.1 )
rect_pivot_offset = Vector2( 512, 300 )
texture = ExtResource( 7 )
expand = true

[node name="Light2D" type="Light2D" parent="TextureRect2"]
position = Vector2( 182.909, 216.364 )
scale = Vector2( 0.572727, 0.572727 )
texture = ExtResource( 4 )
color = Color( 1, 0.431373, 0.054902, 1 )
energy = 1.92

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.105882 )
material = SubResource( 66 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -407.0
margin_top = -70.0
margin_right = -72.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 167, 162 )
custom_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 335.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 167, 33 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../ShopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 76 )
custom_styles/focus = SubResource( 82 )
custom_styles/normal = SubResource( 31 )
text = "PLAY"
flat = true
script = ExtResource( 5 )
has_a_bar = true
should_focus = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PlayButton"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 35 )
expand = true

[node name="ShopButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 335.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 167, 33 )
focus_neighbour_left = NodePath(".")
focus_neighbour_bottom = NodePath("../OptionsButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 76 )
custom_styles/focus = SubResource( 82 )
custom_styles/normal = SubResource( 31 )
text = "STORE"
flat = true
script = ExtResource( 5 )
has_a_bar = true

[node name="DefeatLabel" type="Label" parent="VBoxContainer/ShopButton"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -216.5
margin_top = 5.0
margin_right = 231.5
margin_bottom = 33.0
rect_scale = Vector2( 1, 1e-05 )
rect_pivot_offset = Vector2( 228, 0 )
custom_colors/font_color = Color( 1, 0.239216, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.301961, 0.0431373, 0.0431373, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 78 )
text = "DEFEAT mini-boss to unlock"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ShopButton"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 35 )
expand = true

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 335.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 167, 33 )
focus_neighbour_left = NodePath(".")
focus_neighbour_bottom = NodePath("../CreditsButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 76 )
custom_styles/focus = SubResource( 82 )
custom_styles/normal = SubResource( 31 )
text = "SETTINGS"
flat = true
script = ExtResource( 5 )
has_a_bar = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/OptionsButton"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 35 )
expand = true

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 335.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 167, 33 )
focus_neighbour_left = NodePath(".")
focus_neighbour_bottom = NodePath("../Quit")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 76 )
custom_styles/focus = SubResource( 82 )
custom_styles/normal = SubResource( 31 )
text = "CREDITS"
flat = true
script = ExtResource( 5 )
has_a_bar = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CreditsButton"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 35 )
expand = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 335.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 167, 33 )
focus_neighbour_left = NodePath(".")
focus_neighbour_bottom = NodePath("../PlayButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 76 )
custom_styles/focus = SubResource( 82 )
custom_styles/normal = SubResource( 31 )
text = "EXIT"
flat = true
script = ExtResource( 5 )
has_a_bar = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Quit"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 35 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="."]
modulate = Color( 0.188235, 0.188235, 0.188235, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -475.0
margin_top = -290.5
margin_right = -9.0
margin_bottom = -79.5
texture = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -475.0
margin_top = -293.5
margin_right = -9.0
margin_bottom = -82.5
texture = ExtResource( 3 )
expand = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 77 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
bus = "SoundEffects"

[node name="move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0
bus = "SoundEffects"

[node name="SecretButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = 24.0
flat = true

[node name="Floor" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
mouse_filter = 1

[node name="StaticBody" type="StaticBody2D" parent="Floor"]
position = Vector2( 21, 42 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody"]
shape = SubResource( 83 )

[node name="Dispenser" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -183.0
margin_right = -143.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Sprite" type="Sprite" parent="Dispenser"]
position = Vector2( 0, -5 )

[node name="spawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "SoundEffects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Animation = SubResource( 85 )
anims/RESET = SubResource( 86 )

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="SecretButton" to="." method="_on_SecretButton_pressed"]
